--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Urs Gürtler",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.13.2",
     "express": "^4.13.1",
     "express3-handlebars": "^0.5.2"
   }
