--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.13.2",
+    "cookie-parser": "^1.3.5",
     "express": "^4.13.1",
     "express3-handlebars": "^0.5.2"
   }
