--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.13.2",
     "cookie-parser": "^1.3.5",
     "express": "^4.13.1",
+    "express-session": "^1.11.3",
     "express3-handlebars": "^0.5.2"
   }
 }
