--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.13.1",
     "express-session": "^1.11.3",
     "express3-handlebars": "^0.5.2",
+    "mongoose": "^4.0.8",
     "nodemailer": "^0.7.0"
   }
 }
