--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.13.2",
+    "connect": "^2.30.1",
     "cookie-parser": "^1.3.5",
     "express": "^4.13.1",
     "express-session": "^1.11.3",
     "express3-handlebars": "^0.5.2",
     "mongoose": "^4.0.8",
-    "nodemailer": "^0.7.0"
+    "nodemailer": "^0.7.0",
+    "session-mongoose": "^0.5.2"
   }
 }
